--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    background-color: black;
+}
+
 /* @import "@material-tailwind/react/styles.css"; */
